--- a/src/components/Menu.scss
+++ b/src/components/Menu.scss
@@ -53,6 +53,7 @@
             height: calc(100% - 4.5 * 2px);
             padding: 0 15px;
             background-color: $selected-background-color;
+            width: 12px;
         }
     }
 }
