--- a/src/style/layout.scss
+++ b/src/style/layout.scss
@@ -43,3 +43,11 @@
     right: 0;
     background-color: var(--background-color);
 }
+
+.rotate-orientation {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+
+}
