--- a/src/pages/Home.scss
+++ b/src/pages/Home.scss
@@ -86,6 +86,31 @@
         }
     }
 
+    .projects {
+        .boxes {
+            margin-top: 58px;
+
+            .box {
+                background-color: rgba(21, 21, 21, 1);
+                height: 560px;
+                max-width: 935px;
+                border-radius: 7px;
+                margin-bottom: 92px;
+                padding-left: 90px;
+                padding-top: 112px;
+                box-sizing: border-box;
+
+                .bubble-icon {
+                    margin-bottom: 86px;
+                }
+
+                &:active {
+                    background-color: red;
+                }
+            }
+        }
+    }
+
     .work-together {
         display: flex;
         flex-direction: column;
@@ -155,6 +180,29 @@
                                 height: 10px;
                             }
                         }
+                    }
+                }
+            }
+        }
+
+        .projects {
+            .boxes {
+                .box {
+                    height: 270px;
+                    position: relative;
+                    padding-left: 34px;
+                    padding-top: 68px;
+
+                    .bubble-icon {
+                        margin-bottom: 33px;
+                        width: 46px;
+                        height: 46px;
+                    }
+
+                    .press-icon {
+                        position: absolute;
+                        right: 10px;
+                        bottom: 10px;
                     }
                 }
             }
