--- a/src/style/typography.scss
+++ b/src/style/typography.scss
@@ -4,6 +4,12 @@ h1 {
     margin: 0;
 }
 
+h2 {
+    font-size: 77px;
+    font-weight: 700;
+    margin: 0;
+}
+
 h3 {
     font-size: 40px;
     font-weight: 400;
@@ -32,7 +38,10 @@ h6 {
     h1 {
         font-size: 63px;
         line-height: 83px;
-        ;
+    }
+
+    h2 {
+        font-size: 30px;
     }
 
     h3 {
