box user select none

--- a/src/pages/Home.scss
+++ b/src/pages/Home.scss
@@ -99,6 +99,7 @@
                 padding-left: 90px;
                 padding-top: 112px;
                 box-sizing: border-box;
+                user-select: none;
 
                 .bubble-icon {
                     margin-bottom: 86px;
