--- a/src/pages/Home.scss
+++ b/src/pages/Home.scss
@@ -91,6 +91,7 @@
             margin-top: 58px;
 
             .box {
+                position: relative;
                 background-color: rgba(21, 21, 21, 1);
                 height: 560px;
                 max-width: 935px;
@@ -101,12 +102,54 @@
                 box-sizing: border-box;
                 user-select: none;
 
+                >*:not(.anim-scene) {
+                    z-index: 1;
+                    position: relative;
+                }
+
                 .bubble-icon {
                     margin-bottom: 86px;
                 }
 
-                &:active {
-                    background-color: red;
+                .anim-scene {
+                    position: absolute;
+                    overflow: hidden;
+                    top: 0;
+                    right: 0;
+                    // left: 0;
+                    bottom: 0;
+                    width: 0;
+                    transform: scale(0.8);
+                    transition: all 0.5s cubic-bezier(0.65, 0.12, 0.2, 1);
+
+                    img {
+                        height: 100%;
+                        object-fit: cover;
+                    }
+                }
+
+                .scene-gradient {
+                    height: 100%;
+                    background: linear-gradient(0, rgba(0, 0, 0, 0.95) 0%, rgba(33, 33, 33, 0.739) 28.52%, rgba(153, 153, 153, 0) 100%);
+                    position: absolute;
+                    width: 100%;
+                    top: 0;
+                    right: 0;
+                    z-index: 0;
+                    visibility: hidden;
+                }
+
+                &:active,
+                &:hover {
+                    .anim-scene {
+                        width: 100%;
+                        transform: scale(1);
+
+                    }
+
+                    .scene-gradient {
+                        visibility: visible;
+                    }
                 }
             }
         }
