on pointer down

--- a/src/pages/Home.scss
+++ b/src/pages/Home.scss
@@ -139,7 +139,7 @@
                     visibility: hidden;
                 }
 
-                &:active,
+                &.active,
                 &:hover {
                     .anim-scene {
                         width: 100%;
