--- a/src/style/animations.scss
+++ b/src/style/animations.scss
@@ -13,3 +13,28 @@
         background-size: 0 200%
     }
 }
+
+dialog[open] {
+    opacity: 1;
+    transform: scale(1);
+}
+
+/*   Closed state of the dialog   */
+dialog {
+    opacity: 0;
+    transform: scale(0);
+    transition:
+        opacity .5s ease-out,
+        transform .5s ease-out,
+        overlay .5s ease-out allow-discrete,
+        display .5s ease-out allow-discrete;
+    /* Equivalent to
+    transition: all 0.7s allow-discrete; */
+}
+
+@starting-style {
+    dialog[open] {
+        opacity: 0;
+        transform: scale(0);
+    }
+}
