--- a/src/style/layout.scss
+++ b/src/style/layout.scss
@@ -36,7 +36,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    padding: 31px;
+    padding: 14px;
     position: fixed;
     bottom: 0;
     left: 0;
@@ -45,7 +45,7 @@
     z-index: 10;
 }
 
-.rotate-orientation {
+.centered-absoulte {
     position: absolute;
     top: 50%;
     left: 50%;
