--- a/src/pages/About.scss
+++ b/src/pages/About.scss
@@ -8,6 +8,7 @@
         .long-text {
             white-space: pre-line;
             padding: 40px 0;
+            line-height: 23px;
             // display: inline;
         }
     }
