--- a/src/pages/shared.scss
+++ b/src/pages/shared.scss
@@ -12,7 +12,7 @@
             max-width: 611px;
         }
 
-        .contact-me-btn {
+        .btn-primary {
             margin-top: 20px;
         }
     }
